# 383-fluids-project

./: .gitignore  from scipy.py  requirements.txt  simulation.py  simulation_2.py  simulation_3.py
Old Code/: simulation.py  simulation_3.py
Submission Code/: TJunction.py  noTJunction.py
fluid_simulation/: Cargo.toml
fluid_simulation/src/: app.rs  main.rs  particle.rs
